--- a/index.html
+++ b/index.html
@@ -1,12 +1,110 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
+<html>
+  <head>
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <p>Welcome to Awaid International</p>
-</body>
+    <title>Countdown landing page Bootstrap template</title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="robots" content="all,follow">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,700">
+    <link rel="stylesheet" href="css/style.default.css" id="theme-stylesheet">
+    <link rel="stylesheet" href="css/custom.css">
+    <link rel="shortcut icon" href="img/favicon.png">
+    <style>
+      .container.text-white.text-center.z-index-20{
+        margin-bottom: 400px;
+      }
+      #myVideo {
+        position: fixed;
+        right: 0;
+        bottom: 0;
+        min-width: 100%; 
+        min-height: 100%;
+      }
+      .social-link-whatsapp {
+          background: #03ff20;
+          justify-content: center;
+          font-size: 35px;
+      }
+      .watsapp{
+        display: flex;
+          align-items: center;
+          justify-content: center;
+          margin-top: 30px;
+      }
+      .page-holder{
+        min-height: 0;
+      }
+    </style>
+  </head>
+
+  <body>
+    <video autoplay muted loop id="myVideo">
+      <source src="./img/bck.mp4" type="video/mp4">
+      Your browser does not support HTML5 video.
+    </video>
+    <section class="page-holder position-relative d-flex justify-content-between flex-column" style="top:300px">
+      <div class="overlay"></div>
+
+      <div class="container text-center text-white position-relative mt-4 mb-5">
+        <h1 class="text-shadow mb-5 text-uppercase">Awaid International</h1>
+        <p class="h3 text-shadow text-uppercase">Website is comming Soon. We are still tweaking few details, stay tuned!</p>
+        <div class="countdown mt-5" id="countdown">
+          <div class="row">
+            <div class="countdown-item col-md-3 col-sm-6">
+              <div class="countdown-number fw-light text-shadow" data-days>&nbsp;</div>
+              <p class="h4 fw-light text-shadow">days</p>
+            </div>
+            <div class="countdown-item col-md-3 col-sm-6">
+              <div class="countdown-number fw-light text-shadow" data-hours>&nbsp;</div>
+              <p class="h4 fw-light text-shadow">hours</p>
+            </div>
+            <div class="countdown-item col-md-3 col-sm-6">
+              <div class="countdown-number fw-light text-shadow" data-minutes>&nbsp;</div>
+              <p class="h4 fw-light text-shadow">minutes</p>
+            </div>
+            <div class="countdown-item col-md-3 col-sm-6">
+              <div class="countdown-number fw-light text-shadow" data-seconds>&nbsp;</div>
+              <p class="h4 fw-light text-shadow">seconds</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="container text-white text-center z-index-20">
+        <p class="h3 mb-4 text-shadow fw-normal">Want to know from us? Send an Email for all your queries.</p>
+        <div class="row">
+          <div class="col-lg-5 mx-auto">
+            <form class="d-flex d-inline-block w-100 flex-column flex-lg-row justify-content-center">
+              <div class="input-group">
+                <input class="form-control" id="inlineFormInputName2" type="mailto" placeholder="Type your email address">
+               <a href="mailto:awaidinternationaloep@gmail.com" class="btn btn-primary"> Contact Us</a>
+              </div>
+            </form>
+            <div class="watsapp"><p style="margin-right: 20px; margin-top: revert; font-size:20px">Or Leave Us a Message</p><a class="social-link social-link-whatsapp" href="https://wa.me/923265100867"><i class="fab fa-whatsapp"></i></a></div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <footer class="py-4 w-100 text-sm text-white z-index-20 position-relative">
+      <div class="container">
+        <div >
+          <div style="text-align:center;">Template by <a class="text-reset" href="https://bootstrapious.com">Bootstrapious </a>with support from <a class="text-reset" href="https://hikershq.com">HHQ</a></div>
+        </div>
+      </div>
+    </footer>
+    <script src="vendor/timezz/timezz.js"></script>
+    <script src="js/theme.js"></script>
+    <script>
+      let deadline = 'MArch 15, 2023 00:00:00'
+      document.addEventListener('DOMContentLoaded', function () {
+          countDown(deadline, '#countdown')
+      });
+
+      function sendEmail() {
+        window.location = "awaidinternationaloep@gmail.com";
+      }
+    </script>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+  </body>
 </html>
