--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         </div>
       </div>
     </footer>
-    <script src="vendor/timezz/timezz.js"></script>
+    <script src="vendor/timezz.js"></script>
     <script src="js/theme.js"></script>
     <script>
       let deadline = 'MArch 15, 2023 00:00:00'
