--- a/index.html
+++ b/index.html
@@ -36,6 +36,11 @@
       .page-holder{
         min-height: 0;
       }
+      @media(max-width:960px){
+      .mainsec{
+        top: 100px !important;
+        }
+      }
     </style>
   </head>
 
@@ -44,7 +49,7 @@
       <source src="./img/bck.mp4" type="video/mp4">
       Your browser does not support HTML5 video.
     </video>
-    <section class="page-holder position-relative d-flex justify-content-between flex-column" style="top:300px">
+    <section class="mainsec page-holder position-relative d-flex justify-content-between flex-column" style="top:300px">
       <div class="overlay"></div>
 
       <div class="container text-center text-white position-relative mt-4 mb-5">
